Top Tier Publishing Update
Go live to audience update. added additional styles.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<header>
+        <h1>Big Book Fans 2024 Book Club</h1>
+	</header>
     <div class="books-container" id="booksContainer">
         <!-- Books will be dynamically inserted here by script.js -->
     </div>
+	<footer>
+        <p>April Book Pick: Adam - The Martian</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
