Overhaul 2 Electric Boogaloo

--- a/book-details.html
+++ b/book-details.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1 id="bookTitle">Book Details</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="index.html#previousBooksTab">Previous Books</a>
+            <a href="data-visualization.html">Data Analysis</a>
+        </nav>
     </header>
     <div class="book-details-container">
         <img id="bookImage" src="" alt="Book Image" class="book-image">
