--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <header>
         <h1>Big Book Fans 2024 Book Club</h1>
         <nav>
-            <a href="#" id="homeTab">Current Book</a>
+            <a href="#" id="homeTab">Home</a>
             <a href="#" id="previousBooksTab">Previous Books</a>
+            <a href="data-visualization.html">Data Analysis</a>
         </nav>
+
     </header>
-    <div class="content-container">
-        <div class="books-container" id="booksContainer">
-            <!-- Current month's book will be dynamically inserted here -->
-        </div>
-        <div class="books-container" id="previousBooksContainer" style="display:none;">
-            <!-- Previous books will be dynamically inserted here -->
-        </div>
+    <div id="booksContainer" class="books-container">
+        <!-- Books will be dynamically inserted here by script.js -->
+    </div>
+    <div id="previousBooksContainer" class="previous-books-container" style="display: none;">
+        <!-- Previous books will be dynamically inserted here -->
     </div>
     <script src="script.js"></script>
 </body>
