actually fixed navigation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>Big Book Fans 2024 Book Club</h1>
         <nav>
-            <a href="#" id="homeTab">Home</a>
-            <a href="#" id="previousBooksTab">Previous Books</a>
+            <a href="index.html">Home</a>
+            <a href="index.html#previousBooksTab">Previous Books</a>
             <a href="data-visualization.html">Data Analysis</a>
         </nav>
 
