--- a/data-visualization.html
+++ b/data-visualization.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Data Analysis</h1>
+        <h1>2024 Book Analysis</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="index.html#previousBooksTab">Previous Books</a>
-            <a href="data-visualization.html">Data Analysis</a>
+            <a href="index.html" id="homeTab">Home</a>
+            <a href="book-details.html" id="previousBooksTab">2024 Books</a>
+            <a href="data-visualization.html">2024 Book Analysis</a>
+            <a href="book-details-2025.html" id="previousBooksTab">2025 Books</a>
         </nav>
     </header>
     <div class="chart-container">
