--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <header>
-        <h1>Big Book Fans 2024 Book Club</h1>
+        <h1>Big Book Fans Book Club</h1>
         <nav>
-            <a href="#" id="homeTab">Home</a>
-            <a href="#" id="previousBooksTab">Previous Books</a>
-            <a href="data-visualization.html">Data Analysis</a>
+            <a href="index.html" id="homeTab">Home</a>
+            <a href="book-details.html" id="previousBooksTab">2024 Books</a>
+            <a href="data-visualization.html">2024 Book Analysis</a>
+            <a href="book-details-2025.html" id="previousBooksTab2025">2025 Books</a>
         </nav>
-
     </header>
     <div id="booksContainer" class="books-container">
         <!-- Books will be dynamically inserted here by script.js -->
@@ -23,5 +23,13 @@
         <!-- Previous books will be dynamically inserted here -->
     </div>
     <script src="script.js"></script>
+
+    <h1>We finished 2024! We will have our own yearly "wrapped" similar to spotify out soon!</h1>
+    <h2>Book Choosing List 2025:</h2>
+    <h2>January 2025 - Jordan - The Sword of Kaigen</h2>
+    <h2>February - Adam</h2>
+    <h2>March - Mikayla</h2>
+    <h2>April - Catherine</h2>
+    <h2>May - Matt R</h2>
 </body>
 </html>
