--- a/book-details.html
+++ b/book-details.html
@@ -24,6 +24,6 @@
         <p id="bookWordCount"></p>
         <p id="bookRating"></p>
     </div>
-    <script src="book-details-2025.js"></script>
+    <script src="book-details.js"></script>
 </body>
 </html>
