revised logic on book details

--- a/book-details.html
+++ b/book-details.html
@@ -16,7 +16,7 @@
             <a href="book-details-2025.html" id="previousBooksTab2025">2025 Books</a>
         </nav>
     </header>
-    <div class="book-details-container">
+    <div id="bookDetailsContainer" class="book-details-container"></div>
     <img id="bookImage" src="" alt="Book Image" class="book-image">
     <p id="bookAuthor"></p>
     <p id="bookGenre"></p>
